static/css/pages.css
#homepageElements {
    margin-top: 15vh;
}

#searchpageElements,
#viewpageElements,
#missingpageElements {
    margin-top: 12vh;
}

.title {
    font-size: 4.2rem;
    line-height: 1;
}

.subtitle {
    font-size: 2.1rem;
    line-height: 1;
}

.media-container {
    width: 100%;
    height: auto;
    overflow: hidden;
}

/* Navbar */

#navbarNav {
    display: flex;
    justify-content: space-between;
    width: 100%;
}

#navbarSticker {
    height: 60px;
    width: 60px;
}

.bi-github:hover {
    color: black !important;
    transition: color 0.3s;
}

/* Home */

#homeFeaturedContainer * {
    max-width: 100%;
}

/* Search */

#eppValue {
    width: 3rem;
    text-align: center;
    pointer-events: none;
    opacity: 1;
}

#searchEntryCard {
    cursor: pointer;
    margin: 0.5rem 0;
}

.media-container-search {
    aspect-ratio: 2 / 1;
}

.media-content-search {
    max-height: 10rem;
    object-fit: contain;
}

/* View */

.media-container-view {
    display: flex;
    flex-direction: column; /* stack children vertically */
    aspect-ratio: 16 / 9;
    border: 2px dotted lightgray;
}

.media-content-view img,
.media-content-view video {
    display: block;
    max-width: 100%;
    max-height: 30rem;
    object-fit: contain;
    object-position: center;
}

.media-content-view audio {
    display: block;
    width: 36rem;
    object-fit: contain;
    object-position: center;
}

